--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,9 +21,13 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
+tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-prevent-default = "2.0"
+reqwest = { version = "0.11", features = ["blocking"] }
+image = { version = "0.24", features = [] }
+chrono = { version = "0.4", features = [] }
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
