--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^2.3.0",
+    "@tauri-apps/plugin-fs": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2.2.0",
     "@vue/devtools": "^7.7.2",
     "pinia": "^3.0.1",
