--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,6 +28,7 @@ tauri-plugin-prevent-default = "2.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 image = { version = "0.24", features = [] }
 chrono = { version = "0.4", features = [] }
+tauri-plugin-opener = "2"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
