--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@tauri-apps/api": "^2.3.0",
     "@tauri-apps/plugin-fs": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2.2.7",
+    "@tauri-apps/plugin-os": "~2.2.1",
     "@tauri-apps/plugin-shell": "^2.2.0",
+    "@tauri-apps/plugin-store": "~2",
     "@vue/devtools": "^7.7.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13"
