--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,16 +19,18 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2.0.0", features = ["tray-icon"] }
 tauri-plugin-shell = "2"
 tauri-plugin-fs = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-prevent-default = "2.0"
 reqwest = { version = "0.11", features = ["blocking"] }
-image = { version = "0.24", features = [] }
+image = "0.24"
 chrono = { version = "0.4", features = [] }
 tauri-plugin-opener = "2"
+tauri-plugin-os = "2"
+tauri-plugin-store = "2"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
