实现窗口管理

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,18 +19,22 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2.0.0", features = ["tray-icon"] }
-tauri-plugin-shell = "2"
-tauri-plugin-fs = "2"
+tauri = { version = "2.5.1", features = [
+    'tray-icon',
+    'image-ico',
+    'image-png',
+] }
+tauri-plugin-shell = "2.2.2"
+tauri-plugin-fs = "2.3.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-prevent-default = "2.0"
 reqwest = { version = "0.11", features = ["blocking"] }
 image = "0.24"
 chrono = { version = "0.4", features = [] }
-tauri-plugin-opener = "2"
-tauri-plugin-os = "2"
-tauri-plugin-store = "2"
+tauri-plugin-opener = "2.3.0"
+tauri-plugin-os = "2.2.2"
+tauri-plugin-store = "2.2.1"
 
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
