--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -36,6 +36,10 @@ tauri-plugin-opener = "2.3.0"
 tauri-plugin-os = "2.2.2"
 tauri-plugin-store = "2.2.1"
 
+[target."cfg(windows)".dependencies.windows]
+version = "^0.61"
+features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"]
+
 [profile.dev]
 incremental = true # Compile your binary in smaller steps.
 
