--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ImmediateEarth"
-version = "2.3.0"
+version = "0.0.1"
 description = "即刻地球"
 authors = ["Yiranzai"]
 edition = "2024"
@@ -35,6 +35,7 @@ chrono = { version = "0.4", features = [] }
 tauri-plugin-opener = "2.3.0"
 tauri-plugin-os = "2.2.2"
 tauri-plugin-store = "2.2.1"
+windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
 
 [target."cfg(windows)".dependencies.windows]
 version = "^0.61"
