--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "immediate-earth",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "dev": "concurrently --kill-others \"pnpm vite:dev\" \"pnpm devtools\"",
@@ -15,6 +15,7 @@
     "bump": "node bump-version.cjs",
     "check": "cargo check --manifest-path src-tauri/Cargo.toml",
     "updater": "node scripts/updater.mjs",
+    "updatelog": "node scripts/updatelog.mjs",
     "release": "node scripts/release.mjs"
   },
   "dependencies": {
