--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -35,6 +35,8 @@ chrono = { version = "0.4", features = [] }
 tauri-plugin-opener = "2.3.0"
 tauri-plugin-os = "2.2.2"
 tauri-plugin-store = "2.2.1"
+tauri-plugin-dialog = "2"
+base64 = "0.22"
 
 [target."cfg(windows)".dependencies.windows]
 version = "^0.61"
